--- a/app/assets/stylesheets/spree/backend/spree_bulk_store_credits.css
+++ b/app/assets/stylesheets/spree/backend/spree_bulk_store_credits.css
@@ -2,3 +2,10 @@
 Placeholder manifest file.
 the installer will append this file to the app vendored assets here: 'vendor/assets/stylesheets/spree/backend/all.css'
 */
+input.file-browse {
+  display: none;
+}
+
+ a.sample-download {
+  padding-right: 13px;
+}
