--- a/app/views/spree/admin/users/_import_button.html.erb
+++ b/app/views/spree/admin/users/_import_button.html.erb
@@ -1,7 +1,3 @@
 <% if request.path == admin_users_path %>
-  <%= form_tag import_store_credits_admin_users_path, multipart: true, class: 'form-inline', data: { hook: "csv_form" } do %>
-    <%= file_field_tag :file, class: 'file-browse' %>
-    <%= submit_tag Spree.t(:import), class: 'btn-success btn' %>
-    <%= link_to Spree.t(:example) , sample_store_credit_csv_admin_users_path, class: 'sample-download' %>
-  <% end %>
+  <%= link_to Spree.t(:bulk_store_credit), bulk_store_credits_admin_users_path , class: 'btn-success btn' %>
 <% end %>
