--- a/app/assets/stylesheets/spree/backend/spree_bulk_store_credits.css
+++ b/app/assets/stylesheets/spree/backend/spree_bulk_store_credits.css
@@ -7,5 +7,12 @@ input.file-browse {
 }
 
  a.sample-download {
-  padding-right: 14px;
+  padding-right: 30px;
+}
+
+input#credit_value {
+  padding-right: 30px;
+  width: 157px;
+  display: inline;
+  margin-left: 70%;
 }
